hphp/test/slow/enum_class/enum_class05.php.expectf
Fatal error: Non-enum class D cannot extend enum class parent B in %s/enum_class/enum_class05.php on line 5
